--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-color: darkgray
+}
 #show-contact {
     display: none;
   }
@@ -10,3 +13,9 @@
   .contact:hover {
     text-decoration: underline;
   }  
+  .btn{
+      margin-top: 30px;
+      margin-left: 100px;
+      width: 70px;
+      height:30px;
+  }
